# MobileDetBenchmark

./: .gitignore  .pre-commit-config.yaml  README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ESNet_464_1x.param  ShuffleNetV2_1_5x.param  nanodet-m-1_5x-416.param  picodet-l-320-lastest.param  picodet-l-416-lastest.param  picodet-l-416.param  picodet-l-640-lastest.param  picodet-l-640.param  picodet-lcnet-1_5x-416.param  picodet-m-320.param  picodet-s-320.param  ppyolo-tiny-650e-416.param  yolov5s-640.param  yolox-tiny-416.param
app/src/main/assets/useless/: nanodet-m-416.param  picodet-l-416.param  picodet-l-640.param  picodet-m-320.param  picodet-m-416.param  picodet-s-416.param  picodet_l_640_lastest.param  picodet_lcnet_1_5x_416_coco.param  ppyolo-mbv3-large.param  ppyolo-tiny-650e.param  yolov5n-640.param
app/src/main/java/com/baidu/mobiledetbenchmark/: BenchmarkNcnn.java  MainActivity.java
app/src/main/java/com/tencent/benchmarkncnn/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  benchmarkncnn_jni.cpp  model_head.h
app/src/main/jni/ncnn-android-vulkan-lib/include/ncnn/: platform.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
ncnn/: README.md
paddlelite/: README.md
